force-app/main/default/objects/KimbleOne__RiskAssessmentCategory__c/KimbleOne__RiskAssessmentCategory__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment Category</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Risk Assessment Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessment Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>