force-app/main/default/objects/KimbleOne__RiskAssessmentCategory__c/fields/KimbleOne__RiskAssessment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskAssessment__c</fullName>
    <label>Risk Assessment</label>
    <referenceTo>KimbleOne__RiskAssessment__c</referenceTo>
    <relationshipLabel>Risk Assessment Categories</relationshipLabel>
    <relationshipName>RiskAssessmentCategories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>