force-app/main/default/objects/KimbleOne__RiskAssessmentCategory__c/fields/KimbleOne__RiskCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Category</label>
    <referenceTo>KimbleOne__RiskCategory__c</referenceTo>
    <relationshipLabel>Risk Assessment Categories</relationshipLabel>
    <relationshipName>RiskAssessmentCategories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>