force-app/main/default/objects/KimbleOne__RiskAssessmentCategory__c/fields/KimbleOne__RiskImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskImpact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Impact</label>
    <referenceTo>KimbleOne__RiskImpact__c</referenceTo>
    <relationshipLabel>Risk Assessment Categories</relationshipLabel>
    <relationshipName>RiskAssessmentCategories</relationshipName>
    <type>Lookup</type>
</CustomField>